--- a/.gitmodules
+++ b/.gitmodules
@@ -10,10 +10,6 @@
 	path = resources
 	url = https://github.com/osmandapp/OsmAnd-resources
 	ignore = dirty
-[submodule "core"]
-	path = core
-	url = https://github.com/osmandapp/OsmAnd-core
-	ignore = dirty
 [submodule "build"]
 	path = build
 	url = https://github.com/osmandapp/OsmAnd-build
@@ -21,3 +17,6 @@
 [submodule "help"]
 	path = help
 	url = https://github.com/osmandapp/osmandapp.github.io
+[submodule "core-legacy"]
+	path = core-legacy
+	url = https://github.com/osmandapp/OsmAnd-core
