export APK_VERSION to get the version set correctly.
This reverts a change done in 7894231d54eeeec004a7afc18cb3eea1b4ab420a,
the thing is, when I run: aapt d badging <output.apk>, I get versionName
value of 2.0.0 instead of 2.0.2, after applying the fix in this commit,
versionName is '2.0.2'

--- a/build
+++ b/build
@@ -28,6 +28,7 @@ export TARGET_APP_NAME="$OSMAND_APPNAME"
 export APP_NAME="$OSMAND_APPNAME"
 export APP_FEATURES="$OSMAND_FEATURES"
 export APK_NUMBER_VERSION="$OSMAND_VERCODE"
+export APK_VERSION="$OSMAND_VERSION"
 
 sed -e '/qt.*Compile/d' -i build.gradle
 sed -e '/signingConfig\s\+signingConfigs\./d' -i build.gradle
