--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "core-legacy"]
 	path = core-legacy
 	url = https://github.com/osmandapp/OsmAnd-core
+[submodule "core"]
+	path = core
+	url = https://github.com/osmandapp/OsmAnd-core
